@@ -5727,4 +5727,7 @@ AbcdCBefgBhiBqz
 
 "Z*(|d*){216}"
 
+"(?1)(?#?'){8}(a)"
+    baaaaaaaaac
+
 /-- End of testinput1 --/
