@@ -127,6 +127,11 @@ Version 8.37 xx-xxx-2015
     other kinds of group caused stack overflow at compile time. This bug was
     discovered by the LLVM fuzzer.
 
+32. A pattern such as /(?1)(?#?'){8}(a)/ which had a parenthesized comment
+    between a subroutine call and its quantifier was incorrectly compiled,
+    leading to buffer overflow or other errors. This bug was discovered by the
+    LLVM fuzzer.
+
 
 Version 8.36 26-September-2014
 ------------------------------
